# geotrees

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: publish-pypi.yml  testing-suite.yml
GeoSpatialTools/: __init__.py  distance_metrics.py  great_circle.py  kdtree.py  neighbours.py  octtree.py  quadtree.py  record.py  shape.py  utils.py
docs/: Documentation.tex  authors.rst  bisection.rst  conf.py  getting_started.rst  hyperlinks.rst  index.rst  installation.rst  introduction.rst  kdtree.rst  octtree.rst  quadtree.rst  record.rst  shape.rst  users_guide.rst
geotrees/: __init__.py  distance_metrics.py  kdtree.py  octtree.py  quadtree.py  record.py  shape.py  utils.py
notebooks/: kdtree.ipynb  nearest_dates.ipynb  octtree.ipynb
test/: test_greatcircle.py  test_kdtree.py  test_neighbours.py  test_octtree.py  test_quadtree.py
